--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <div class="page">
                 <div>
                     <h3>Then press the button to get some Kanye quotes.</h3>
-                    <form><h3>
-    <input id="SubmitNum" type="button" value="Inspire Me!!!"></input>
-</h3>
+                    <form>
+                        <h3><input id="SubmitNum" type="button" value="Inspire Me!!!"></input></h3>
                     </form>
                 </div>
                 <div id="Results"></div>
